<resources>
    <string name="app_name">TaskBeats</string>
    <string name="home_title">Task Beat</string>
    <string name="create_task_title">Create task</string>
    <string name="btn_create">Create</string>
    <string name="update_task_title">Update task</string>
    <string name="btn_update">Update</string>
    <string name="create_category">Create category</string>
    <string name="task_name_e_g_study_android">Task name: e.g: Study Android</string>
    <string name="delete">Delete</string>
    <string name="title_category_delete">Important</string>
    <string name="description_category_delete">By deleting a category you will delete all tasks with this category, are you sure?</string>
    <string name="empty_category_title">No category found</string>
    <string name="empty_category_description">Please create a new one</string>
</resources>