<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/create_task_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/sp_category_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_task_name"
            android:layout_width="match_parent"
            android:hint="@string/task_name_e_g_study_android"
            android:layout_height="wrap_content"
            android:minHeight="48dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:weightSum="2">

        <Button
            android:layout_weight="1"
            android:id="@+id/btn_task_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/btn_task_create_or_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_create"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

    </LinearLayout>

</LinearLayout>